[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }
user32-sys = "0.2.0"
kernel32-sys = "0.2.2"
native-windows-gui = "1.0.12"
libc = "0.2.108"